# agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: graph.py  state.py
app/agent/nodes/: assess.py  bypass.py  chat_smalltalk.py  classify.py  decompose.py  faithfulness.py  generate.py  parent_fetch.py  reformulate.py  rerank.py  retrieve.py
app/api/: chat.py  documents.py  feedback.py  health.py  ingest.py  me.py  sessions.py  usage.py
app/core/: auth.py  celery_app.py  config.py  llm.py  qdrant_client.py
app/db/: crud.py  models.py  session.py
app/ingestion/: chunker.py  embedder.py  parser.py  tasks.py  upserter.py
app/observability/: langfuse_client.py  ragas_eval.py
app/retrieval/: bge_reranker.py  cache.py  hybrid_search.py
app/storage/: s3_client.py
docs/: DEPLOY.md  DOKPLOY_QUICKSTART.md  artifact1_architecture_decisions.html  artifact2_build_guide.html
migrations/: env.py
migrations/versions/: 16576f3fe244_initial_schema_documents_parent_chunks_.py  dad07d7cd214_chat_sessions_and_chat_messages.py
scripts/: create_collections.py  eval_classifier.py  eval_retrieval.py  profile_chat.py  run_eval.py  seed_tenant.py
scripts/data/: classifier_eval.json  retrieval_eval.json
tests/: conftest.py  test_agent.py  test_ingestion.py  test_retrieval.py
